syntax = "proto3";
option go_package="./proto/house";
package go.micro.srv.house;

service House {
	rpc PubHouse(Request) returns (Response) {} ; //发布房源信息
	rpc GetHouseInfo(GetReq)returns(GetResp){}; //获取房源信息
	rpc UploadHouseImg(ImgReq)returns(ImgResp){};  //添加房屋图片
	rpc GetIndexHouse(IndexReq)returns(GetResp){};//轮播图
}

 //  发布房源信息 传入参数
 //   {
 //      "title":"上奥世纪中心",
 //      "price":"666",
 //      "area_id":"5",
 //      "address":"西三旗桥东建材城1号",
 //      "room_count":"2",
 //      "acreage":"60",
 //      "unit":"2室1厅",
 //      "capacity":"3",
 //      "beds":"双人床2张",
 //      "deposit":"200",
 //      "min_days":"3",
 //       "max_days":"0",
 //       "facility":["1","2","3","7","12","14","16","17","18","21","22"]
 //  }
message Request {
	    string acreage = 1;
    	string address = 2;
    	string area_id = 3;
    	string beds = 4;
    	string capacity = 5;
    	string deposit = 6;
    	repeated string facility = 7;
    	string max_days = 8;
    	string min_days = 9;
    	string price = 10;
    	string room_count = 11;
    	string title = 12;
    	string unit = 13;
    	string userName = 14;
}
//发布房源信息 传出参数
// {
//    “errno”:"0",
//    "errmsg":"成功"，
//    “data”:{
//     "house_id": "1"
//    }
// }

message Response {
	string errno = 1;
    string errmsg = 2;
    HouseData data = 3;
}

message HouseData{
	string house_id = 1;
}

//获取房源信息 传入参数
/*
{
    "errno": "0",
		"errmsg": "成功",
		"data": {
       "houses": [
						{
							"address": "西三旗桥东",
							"area_name": "昌平区",
							"ctime": "2017-11-06 11:16:24",
								"house_id": 1,
								"img_url": "http://101.200.170.171:9998/group1/M00/00/00/Zciqq1oBJY-AL3m8AAS8K2x8TDE052.jpg",
							 "order_count": 0,
								"price": 100,
								"room_count": 2,
								"title": "上奥世纪中心",
								"user_avatar": "http://101.200.170.171:9998/group1/M00/00/00/Zciqq1oBLFeALIEjAADexS5wJKs340.png"
						},
						{
							"address": "北清路郑上路",
							"area_name": "顺义区",
							"ctime": "2017-11-06 11:38:54",
							"house_id": 2,
							"img_url": "http://101.200.170.171:9998/group1/M00/00/00/Zciqq1oBKtmAC8y8AAZcKg5PznU817.jpg",
							"order_count": 0,
							"price": 1000,
							"room_count": 1,
							"title": "修正大厦302教室",
							"user_avatar": "http://101.200.170.171:9998/group1/M00/00/00/Zciqq1oBLFeALIEjAADexS5wJKs340.png"
						}
		  ]
		}
}

 */
// 传入参数
message GetReq{
	string userName = 1;
}

//传出参数
message GetResp{
	string errno = 1;
	string errmsg = 2;
	GetData data = 3;
}

message GetData{
	repeated Houses houses = 1;
}
message Houses {
	string address = 1;
	string area_name = 2;
	string ctime = 3;
	int32 house_id = 4;
	string img_url = 5;
	int32 order_count = 6;
	int32 price = 7;
	int32 room_count = 8;
	string title = 9;
	string user_avatar = 10;
}

//添加房屋图片 输入参数
//传入参数  房屋 id、图片二进制、图片后缀
message ImgReq{
	string houseId = 1;
	bytes imgData = 2;
	string fileExt = 3;
}
//添加房屋图片 输出参数
/*
{
    "errno": "0",
		"errmsg": "成功",
		"data": {
      "url": "http://101.200.170.171:9998/group1/M00/00/00/Zciqq1oBLmWAHlsrAAaInSze-cQ719.jpg"
		}
}

 */
message ImgResp{
	string errno = 1;
	string errmsg = 2;
	ImgData data = 3;
}

message ImgData{
	string url = 1;
}
// 轮播图
message IndexReq{

}